# vk

./: .gitignore  .gitleaksignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  skills-lock.json  swain.settings.json
.agents/: session.json
.agents/skills/swain-design/: SKILL.md
.agents/skills/swain-design/references/: adr-check-guide.md
.agents/skills/swain-design/scripts/: adr-check.sh  detect-duplicate-numbers.sh  fix-collisions.sh  migrate-bugs.sh  next-artifact-number.sh  renumber-artifact.sh  specgraph.sh  specwatch.sh  test-detect-duplicate-numbers.sh  test-next-artifact-number.sh
.agents/skills/swain-dispatch/: SKILL.md
.agents/skills/swain-do/: SKILL.md
.agents/skills/swain-release/: SKILL.md
.agents/skills/swain-retro/: SKILL.md
.agents/skills/swain-search/: SKILL.md
.agents/skills/swain-sync/: SKILL.md
docs/epic/: list-epic.md
docs/initiative/: list-initiative.md
docs/spec/: list-spec.md
docs/swain-retro/: 2026-03-22-greenfield-mvp-build.md
docs/troves/vikunja-api/: manifest.yaml  synthesis.md
docs/vision/: list-vision.md
src/vk/: __init__.py  cache.py  client.py  config.py  exceptions.py  formatting.py  models.py
src/vk/adapters/: __init__.py  cli.py  mcp_http.py  mcp_stdio.py  mcp_tools.py
src/vk/services/: __init__.py  attachments.py  auth.py  buckets.py  comments.py  labels.py  projects.py  search.py  tasks.py
tests/: conftest.py  test_client.py  test_config.py  test_integration.py  test_models.py
tests/test_adapters/: test_cli.py
tests/test_services/: test_projects.py  test_tasks.py
(+23 files in other folders)
